<resources>
    <string name="app_name">MieraProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_browser">WebView</string>
    <string name="nav_data">Not interesting data</string>
    <string name="cat_3_text_value">Название породы: Сноу–шу\nСтрана происхождения: США\nВремя зарождения породы: XX век\nВес: от 2,5 до 5,5 кг\nПродолжительность жизни: 10 – 15 лет</string>
    <string name="cat_1_text_value">Название породы: Бенгальская кошка\nСтрана происхождения: США\nВремя зарождения породы: 1983 год\nВес: 4 – 9 кг\nПродолжительность жизни: 12 – 15 лет, иногда – до 21 года</string>
    <string name="cat_2_text_value">Название породы: Манчкин\nСтрана происхождения: США\nВремя зарождения породы: XX век\nВес: от 2,2 до 4 кг\nПродолжительность жизни: 13 – 16 лет</string>
    <string name="cat_7_text_value">Название породы: Бурманская кошка\nСтрана происхождения: Бирма\nВес: 5 – 9 кг\nПродолжительность жизни: 10 – 15 лет</string>
    <string name="cat_6_text_value">Название породы: Мейн–кун\nСтрана происхождения: США\nВремя зарождения породы: XIX век\nРост (высота в холке): 25–41 см\nПродолжительность жизни: 12–15 лет</string>
    <string name="cat_5_text_value">Название породы: Египетская мау\nСтрана происхождения: Египет\nВес: 3 – 6 кг\nПродолжительность жизни: 13 – 15 лет</string>
    <string name="cat_4_text_value">Название породы: Шотландская вислоухая кошка\nСтрана происхождения: Великобритания, Шотландия\nВремя зарождения породы: 1961 год\nВес: 4 – 7 кг\nПродолжительность жизни: 12 – 15 лет</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_contact">Contact Screen</string>
    <string name="menu_recorder">Voice Recorder</string>

    <string name="label_email_password">Email/Password Authentication</string>
    <string name="desc_email_password">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified:
%2$b)</string>
    <string name="email_password_title_text">Email and Password</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for de-
tails.</string>
    <string name="menu_map">Restaurants</string>
    <string name="menu_files">File Works</string>
</resources>