<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.tsybulko.mieraproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.tsybulko.mieraproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.tsybulko.mieraproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.tsybulko.mieraproject.ui.web_view.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.tsybulko.mieraproject.ui.data.DataFragment"
        android:label="@string/nav_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_stopwatch"
        android:name="ru.mirea.tsybulko.mieraproject.ui.stopwatch.StopwatchFragment"
        android:label="nav_stopwatch"
        tools:layout="@layout/fragment_stopwatch" />

    <fragment
        android:id="@+id/nav_compass"
        android:name="ru.mirea.tsybulko.mieraproject.ui.compass.CompassFragment"
        android:label="nav_compass"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="ru.mirea.tsybulko.mieraproject.ui.contact.ContactScreenFragment"
        android:label="nav_contact"
        tools:layout="@layout/fragment_contact_screen" />

    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.tsybulko.mieraproject.ui.voicerecorder.VoiceRecorderFragment"
        android:label="nav_record"
        tools:layout="@layout/fragment_voice_recorder" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.tsybulko.mieraproject.ui.restaurant.RestaurantFragment"
        android:label="nav_map"
        tools:layout="@layout/fragment_restaurant" />

</navigation>